# coding-for-economists

./: .buildinfo  .dockerignore  .gitignore  .nojekyll  .pre-commit-config.yaml  Dockerfile  Dockerfile_conda  LICENSE  README.md  _config.yml  _quarto.yml  _toc.yml  acknowledgements.html  acknowledgements.md  auto-office.ipynb  auto-reports.md  auto-research-outputs.html  auto-research-outputs.md  auto-research-outputs.qmd  basics-of-coding.md  basics-preliminaries.md  best-practice-coding.md  code-advanced.html  code-advanced.ipynb  code-advcd-best-practice.html  code-advcd-best-practice.ipynb  code-basics.html  code-basics.ipynb  code-basics.md  code-best-practice.html  code-best-practice.md  code-best-practice.qmd  code-further-advanced.html  code-further-advanced.ipynb  code-preliminaries.html  code-preliminaries.md  code-preliminaries.qmd  code-where.html  code-where.ipynb  codeforecon.yml  (+214 more)
.github/: build.yml
.github/workflows/: build.yml  labeler.yml  release.yml  tests.yml
_sources/: auto-research-outputs.ipynb  auto-research-outputs.md  code-advanced.ipynb  code-advcd-best-practice.ipynb  code-basics.ipynb  code-best-practice.ipynb  code-preliminaries.ipynb  code-preliminaries.md  code-where.ipynb  coming-from-excel.ipynb  coming-from-excel.md  coming-from-matlab.ipynb  coming-from-matlab.md  coming-from-r.ipynb  coming-from-stata.ipynb  coming-from-stata.md  contributing.md  craft-extended-abstracts.md  craft-generating-ideas.ipynb  craft-intro.md  craft-referee.ipynb  craft-research-blogs.ipynb  craft-research-blogs.md  craft-search.md  craft-technical-reports.md  craft-writing-papers.md  data-advanced.ipynb  data-analysis-quickstart.ipynb  data-boolean.ipynb  data-categorical.ipynb  data-databases.ipynb  data-exploratory-analysis.ipynb  data-joining-data.ipynb  data-missing-values.ipynb  data-numbers.ipynb  data-read-and-write.ipynb  data-read-and-write.md  data-sharing.ipynb  data-sharing.md  data-spreadsheets.ipynb  (+43 more)
data/: Nov2020_MPR_CPI_fan.csv  bake_sale.xlsx  beijing_pm.csv  berkeley_data.pkl  capop.dta  characters.csv  chicago.csv  deaths.xlsx  flights.parquet  flights1kBTS.csv  ilpop.dta  owid_gapminder.csv  priestley-timeline.csv  smith_won.txt  starwars.csv  starwars.feather  starwars.pickle  tfl_small.parquet
data/geo/: ashe_lad_median_pay_2020.csv  cv_ldn_deaths.parquet
data/geo/cities/: ne_110m_populated_places.VERSION.txt
data/geo/rivers/: rivers.dbf  rivers.shp  rivers.shx
data/geo/uk_lad/: Local_Authority_Districts__May_2020__UK_BUC.dbf  Local_Authority_Districts__May_2020__UK_BUC.shp  Local_Authority_Districts__May_2020__UK_BUC.shx  Local_Authority_Districts__May_2020__UK_BUC.xml
scripts/: fix_kernels.py  jb_to_quarto.py
site_libs/bootstrap/: bootstrap-294be8ca1eefda555f1994b6e1be42f6.min.css  bootstrap-dark-a46c92d1a3b8d11f1f9fb1f566cd2c52.min.css  bootstrap-dark.min.css  bootstrap.min.css
site_libs/quarto-html/: quarto-syntax-highlighting-067f8ab80d092ae3595f7402c2c9b667.css  quarto-syntax-highlighting-dark-ca1cb3032aa6b9181247695f27e2facc.css
