[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.12"
Fiona = "^1.8.20"
Shapely = "^1.7.1"
pyproj = "^3.2.1"
descartes = "^1.1.0"
Rtree = "^0.9.7"
jupyter = "^1.0.0"
numpy = "^1.21.2"
pandas = "^1.3.3"
pyyaml = "^5.4.1"
scipy = "^1.7.1"
seaborn = "^0.11.2"
statsmodels = "^0.13.0"
tqdm = "^4.62.3"
pycodestyle = "^2.7.0"
pyarrow = "^5.0.0"
geopandas = "^0.10.0"
autopep8 = "^1.5.7"
geoplot = "^0.4.4"
nltk = "^3.6.4"
arrow = "^1.2.0"
osmnx = "^1.1.1"
pandas-datareader = "^0.10.0"
pandasdmx = "^1.6.0"
"pdfminer.six" = "^20201018"
jupyter-book = "^0.11.3"
pytest = "^6.2.5"
rich = "^10.12.0"
pyinstrument = "^4.0.4"
loguru = "^0.5.3"
pre-commit = "^2.15.0"
dataprep = "^0.3.0"
pandera = "^0.7.2"
linearmodels = "^4.24"
sympy = "^1.8"
pingouin = "^0.4.0"
jax = "^0.2.21"
plotly = "^5.3.1"
spacy = "^3.1.3"
plotnine = "^0.8.0"
altair = "^4.1.0"
datatable = "^1.0.0"
cerberus = "^1.3.4"
great-expectations = "^0.13.36"
dagster = "^0.12.13"
icecream = "^2.1.1"
waterfallcharts = "^3.8"
matplotlib-venn = "^0.11.6"
pywaffle = "^0.6.3"
joypy = "^0.2.5"
jupyterlab = "^3.1.18"
textstat = "^0.7.2"
nbstripout = "^0.5.0"
ghp-import = "^2.0.2"
colorcet = "^2.0.6"
holoviews = "^1.14.6"
specification_curve = "^0.2.6"
twopiece = "^1.2.0"
stargazer = "^0.0.5"
matplotlib-scalebar = "^0.7.2"
black-nb = "^0.5.0"
pyhdfe = "^0.1.0"
skimpy = "^0.0.4"
vega_datasets = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
