[project]
name = "Coding for Economists"
version = "1.0.3"
description = "A guide for economists on what programming is, why it's useful, and how to do it."
authors = [{name="Arthur Turrell", email="None@none.com"}]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
]
requires-python = "==3.10.16"
