[project]
name = "CodingforEconomists"
version = "1.0.6"
description = "A guide for economists on what programming is, why it's useful, and how to do it."
authors = [{name="Arthur Turrell", email="None@none.com"}]
readme = "README.md"
requires-python = "==3.10.16"
dependencies = [
    "altair>=6.0.0",
    "bambi>=0.15.0",
    "binsreg>=2.1.7",
    "cerberus>=1.3.8",
    "colorcet>=3.1.0",
    "dayplot>=0.5.1",
    "feature-engine>=1.9.4",
    "geopandas>=1.1.3",
    "geoplot>=0.5.1",
    "graphviz>=0.21",
    "great-tables>=0.21.0",
    "ibis-framework[sqlite]>=12.0.0",
    "joypy>=0.2.6",
    "jupyter>=1.1.1",
    "jupyter-book>=2.1.4",
    "lets-plot>=4.9.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "matplotlib-scalebar>=0.9.0",
    "matplotlib-venn>=1.1.2",
    "nbstripout>=0.9.1",
    "nltk>=3.9.4",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "osmnx>=2.0.7",
    "palmerpenguins>=0.1.6",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "pandasdmx>=1.10.0",
    "pandera>=0.30.1",
    "pingouin>=0.6.1",
    "plotly>=6.7.0",
    "plotnine>=0.15.3",
    "polars>=1.39.3",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.1",
    "pyinstrument>=5.1.2",
    "pymc>=5.25.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-slugify>=8.0.4",
    "pywaffle>=1.1.1",
    "rich>=14.3.3",
    "ruff>=0.15.10",
    "ruptures>=1.1.10",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "skimpy>=0.0.20",
    "spacy>=3.8.11",
    "specification-curve>=0.3.9",
    "sqlmodel>=0.0.30",
    "stargazer>=0.0.7",
    "statsmodels>=0.14.6",
    "sympy>=1.14.0",
    "textstat>=0.7.13",
    "toml>=0.10.2",
    "umap-learn>=0.5.12",
    "waterfallcharts>=3.8",
    "wordcloud>=1.9.6",
    "workalendar>=17.0.0",
]


[tool.ruff.lint]
ignore = ["F405", "F403"]
